--- a/ES6_data_manipulation/package.json
+++ b/ES6_data_manipulation/package.json
@@ -1,9 +1,25 @@
 {
+  "name": "es6_data_manipulation",
+  "version": "1.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "node",
+    "test": "jest",
+    "lint": "eslint .",
+    "full-test": "npm run lint && npm test"
+  },
   "devDependencies": {
-    "@babel/core": "^7.28.3",
-    "@babel/preset-env": "^7.28.3",
+    "@babel/core": "^7.25.0",
+    "@babel/preset-env": "^7.25.0",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.34.0",
+    "eslint": "^9.9.0",
     "jest": "^29.7.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    }
   }
 }
